--- a/css/styles.css
+++ b/css/styles.css
@@ -187,7 +187,17 @@ img {
     margin-top: 30px;
     margin-left: 30px;
 }
-
+/* .feautures-item::before {
+    display: block;
+    width: 270px;
+    height: 120px;
+    margin-bottom: 30px;
+    background-color: var(--bg-light);
+    background-repeat: no-repeat;
+    background-position: center;
+    content: "";
+    background-image: url("../images/feautures/feautures1.svg");
+} */
 .title-feautures {
     font-size: 14px;
     line-height: 1.14;
@@ -251,6 +261,7 @@ img {
     
 }
 .team .text-wrapper {
+    /* display: block */
     padding: 30px 60px;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -271,6 +282,14 @@ img {
     letter-spacing: 0.03em; 
     color: var(--text-color);
 }
+/* .socials {
+    display: flex;
+}
+.text-wrapper .socials::after{
+    background-image: url(../images/socials/instagram.svg);
+    contain: "";
+    background-color: #fff;
+} */
 /* =======END TEAM======= */
 /* =======START FOOTER======= */
 .footer {
