--- a/css/styles.css
+++ b/css/styles.css
@@ -131,9 +131,13 @@ img {
 /* =======END HEADER======= */
 /* =======START HERO======= */
 .hero {
-    background-color: var(--bg-dark);
+    max-height: 1600рх;
     text-align: center;
     padding: 200px 0; 
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero-bg.jpg");
+    background-size: cover;
+    /* background-position: center; */
+    background-color: #C4C4C4;
 }
 .hero-title {
     margin-bottom: 30px;
@@ -168,6 +172,7 @@ img {
 }
 .button:hover,
 .button:focus {
+    
     color: var(--accent-color-white);
     background-color: var(--extra-blue);
     cursor: pointer;
@@ -175,6 +180,14 @@ img {
 /* =======END HERO======= */
 /* =======START FEAUTURES======= */
 
+.feautures-icons {
+    padding: 25px 100px;
+    margin-bottom: 30px;
+    background-color:var(--bg-light);
+}
+.feautures-icons .icon {
+    
+}
 .feautures-list {
     display: flex;
     align-items: flex-start;
@@ -262,7 +275,7 @@ img {
 }
 .team .text-wrapper {
     /* display: block */
-    padding: 30px 60px;
+    padding: 30px 0;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
@@ -275,6 +288,7 @@ img {
     letter-spacing: 0.03em;
 }
 .team-position {
+    margin-bottom: 16px;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.19;
@@ -282,14 +296,47 @@ img {
     letter-spacing: 0.03em; 
     color: var(--text-color);
 }
-/* .socials {
+/* .social-list {
     display: flex;
-}
-.text-wrapper .socials::after{
-    background-image: url(../images/socials/instagram.svg);
-    contain: "";
-    background-color: #fff;
+    justify-content: space-between;
 } */
+/* .text-wrapper .socials  {
+
+} */
+    
+
+    
+.social-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 44px;
+    height: 44px; 
+    border-radius: 50%;
+}
+.team-socials {
+    padding: 0 32px;
+    /* margin-bottom: 30px; */
+}
+.team-socials .social-list{
+    display: flex;
+    justify-content: space-between;
+    
+    
+}
+.social-icon {
+    fill: #AFB1B8;
+}
+.social-link:hover,
+.social-link:focus {
+    background-color: var(--accent-color-blue);  
+    
+}
+.social-link:hover .social-icon {
+
+    fill: var(--accent-color-white);
+}
+
 /* =======END TEAM======= */
 /* =======START FOOTER======= */
 .footer {
