--- a/css/styles.css
+++ b/css/styles.css
@@ -473,7 +473,13 @@ img {
     flex-basis: calc((100% - 90px)/3);
     margin-top: 30px;
     margin-left: 30px;
+    
 }
+.portfolio-list:hover {
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+}
+
 .portfolio .text-wrapper {
     padding: 20px 24px;
     border-left: 1px solid #EEEEEE;
