--- a/css/styles.css
+++ b/css/styles.css
@@ -113,7 +113,7 @@ img {
     margin-left: auto;
 }
 .nav-contact-item:not(:last-child) {
-    margin-right: 50px;
+    margin-right: 30px;
 }   
 
 .nav-contact .link {
@@ -129,12 +129,15 @@ img {
 .nav-contact .link:focus {
     color: var(--accent-color-blue);
 }
-.contact-wrapper {
+.icon-link {
+    padding: 32px o;
+}
+/* .contact-wrapper {
     display: flex;
 }
 .contact-wrapper:not(:last-child) {
     margin-right: 30px;
-}
+} */
 .contact-icon {
     margin-right: 10px;
     fill: var(--text-color);
