--- a/css/styles.css
+++ b/css/styles.css
@@ -491,7 +491,8 @@ img {
     display: block;
     
 }
-.portfolio-list .link:hover {
+.portfolio-list .link:hover,
+.portfolio-list .link:focus {
     box-shadow: 0px 1px 3px var(--bg-dark);
     cursor: pointer;
 }
